--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
     ]
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -45,19 +48,22 @@
     "@types/node": "^16.18.68",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4",
     "animate.css": "^4.1.1",
     "eslint-plugin-react-func": "^0.1.18",
     "husky": "^8.0.3",
     "lint-staged": "^15.2.0",
     "moment": "^2.29.4",
     "playwright": "^1.40.1",
+    "react": "^18.2.0",
+    "react-animation-on-scroll": "^5.1.0",
+    "react-dom": "^18.2.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.20.1",
-    "sass": "^1.69.5"
+    "react-scripts": "5.0.1",
+    "sass": "^1.69.5",
+    "typescript": "^4.9.5",
+    "v3": "^0.0.0",
+    "web-vitals": "^2.1.4"
   },
   "devDependencies": {
     "@playwright/test": "^1.40.1",
