--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
     "animate.css": "^4.1.1",
+    "emailjs-com": "^3.2.0",
     "eslint-plugin-react-func": "^0.1.18",
     "formik": "^2.4.5",
     "husky": "^8.0.3",
