--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "formik": "^2.4.5",
     "husky": "^8.0.3",
     "lint-staged": "^15.2.0",
+    "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "playwright": "^1.40.1",
     "react": "^18.2.0",
@@ -70,6 +71,7 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.40.1",
+    "@types/lodash": "^4.14.202",
     "eslint": "^8.55.0",
     "eslint-plugin-jsdoc": "^46.9.1",
     "husky": "^8.0.0"
