--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
+    "react-use-websocket": "^4.5.0",
     "sass": "^1.69.5",
     "typescript": "^4.9.5",
     "v3": "^0.0.0",
