--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-animation-on-scroll": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
+    "react-responsive": "^9.0.2",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
     "react-use-websocket": "^4.5.0",
